[gd_scene load_steps=3 format=3 uid="uid://mainscene123"]

[ext_resource type="Script" uid="uid://3noxal6offkq" path="res://scenes/Main.gd" id="1_main"]
[ext_resource type="Script" uid="uid://ddf15myn023k" path="res://scenes/Board.gd" id="2_board"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Board" type="Node2D" parent="."]
script = ExtResource("2_board")

[node name="Units" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
alignment = 1

[node name="TurnLabel" type="Label" parent="CanvasLayer/HUD/TopBar"]
layout_mode = 2
text = "Turn 1 - P1"

[node name="P1Status" type="Label" parent="CanvasLayer/HUD/TopBar"]
layout_mode = 2
text = "P1: 10"

[node name="P2Status" type="Label" parent="CanvasLayer/HUD/TopBar"]
layout_mode = 2
text = "P2: 10"

[node name="TimerLabel" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -15.0
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 22
horizontal_alignment = 2
vertical_alignment = 1
text = "⏱️ 30s"

[node name="BottomBar" type="VBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 8
alignment = 1

[node name="APLabel" type="Label" parent="CanvasLayer/HUD/BottomBar"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.2, 0.95, 1, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
text = "⚡ AP: 50 / 50"

[node name="SpellsContainer" type="GridContainer" parent="CanvasLayer/HUD/BottomBar"]
layout_mode = 2
size_flags_horizontal = 4
columns = 5
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="EndTurnBtn" type="Button" parent="CanvasLayer/HUD/BottomBar"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(180, 40)
theme_override_font_sizes/font_size = 16
text = "⏭️ End Turn"

[node name="LogPanel" type="RichTextLabel" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -70.0
grow_vertical = 0
bbcode_enabled = true
text = "Log..."

[node name="P1HPDisplay" type="VBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 80.0

[node name="P1Name" type="Label" parent="CanvasLayer/HUD/P1HPDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.231, 0.51, 0.965, 1)
theme_override_font_sizes/font_size = 18
text = "Player 1"

[node name="P1HPBar" type="ProgressBar" parent="CanvasLayer/HUD/P1HPDisplay"]
layout_mode = 2
custom_minimum_size = Vector2(150, 20)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="P1HPLabel" type="Label" parent="CanvasLayer/HUD/P1HPDisplay"]
layout_mode = 2
text = "10 / 10"

[node name="P2HPDisplay" type="VBoxContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0

[node name="P2Name" type="Label" parent="CanvasLayer/HUD/P2HPDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.937, 0.267, 0.267, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2
text = "Player 2"

[node name="P2HPBar" type="ProgressBar" parent="CanvasLayer/HUD/P2HPDisplay"]
layout_mode = 2
custom_minimum_size = Vector2(150, 20)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="P2HPLabel" type="Label" parent="CanvasLayer/HUD/P2HPDisplay"]
layout_mode = 2
horizontal_alignment = 2
text = "10 / 10"

[node name="DamagePopups" type="Node2D" parent="."]
